configs/canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: machine-learning
spec:
  hosts:
    - machine-learning
  http:
    - route:
        - destination:
            host: machine-learning
            subset: v1
          weight: 90
        - destination:
            host: machine-learning
            subset: v2
          weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: machine-learning
spec:
  host: machine-learning
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
