configs/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: iot-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simulation
spec:
  hosts:
    - "*"
  gateways:
    - iot-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/performSimulation

      route:
        - destination:
            host: simulation.default.svc.cluster.local
            port:
              number: 3001
